# wtop

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: handlers.rs  main.rs  models.rs
src/metrics/: cpu.rs  disk.rs  filesystem.rs  gpu.rs  loadavg.rs  memory.rs  mod.rs  network.rs  process.rs
static/: index.html  locales.json  manifest.json  sw.js
tests/: integration.rs
