[package]
name = "wtop"
version = "0.2.0"
edition = "2024"
authors = ["Jose Maria Aranguren <lisp-likely-smugly@duck.com>"]
description = "Web based system monitor"
license = "AGPL-3.0-or-later"
repository = "https://github.com/josema294/wtop"
homepage = "https://github.com/josema294/wtop"
readme = "README.md"
keywords = ["monitor", "system", "cli", "top"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
axum = "0.8.8"
futures = "0.3.32"
mime_guess = "2.0.5"
nvml-wrapper = "0.12.0"
rust-embed = "8.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.2"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
